ingress/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-db
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres-auth

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-auth
spec:
  serviceName: auth-db
  replicas: 1
  selector:
    matchLabels:
      app: postgres-auth
  template:
    metadata:
      labels:
        app: postgres-auth
    spec:
      containers:
        - name: postgres-auth
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-auth-data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["sh", "-c", "pg_isready -U postgres -d user_credentials_db"]
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          livenessProbe:
            exec:
              command: ["sh", "-c", "pg_isready -U postgres -d user_credentials_db"]
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              memory: "2Gi"
              cpu: "2000m"
      volumes: []
  volumeClaimTemplates:
    - metadata:
        name: postgres-auth-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
